--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,3 +57,15 @@ code {
 .content .by {
   font-weight: bold;
 }
+.name{
+    font-weight: bold;
+    color: blue;
+}
+li {
+    list-style: none;
+    margin-bottom: 20px;
+}
+li img{
+    width: 40px;
+    height: 40px;
+}
